# llm-sqa

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  REPRODUCING.md  api_inference.py  batch_process_sqa.py  batch_test_mlflow.py  client_example.py  demo_mlflow.py  docker-compose.yml  example_introspection.py  introspect_one.py  model_introspection.py  pyproject.toml  requirements-api.txt  resample_to_16k.py  salmonn_core.py  visualization_utils.py
docs/: deployment.md  introspection.md  mlflow.md
experiments/: FINDINGS.md  PLAN-B-SCOPING.md  PLAN_B_SUMMARY.md  analyze_degradation.py  analyze_enhancement.py  analyze_voicebank.py  build_deck.py  calibration.py  config.py  degradation_sweep.py  enhance_convfsenet.py  enhancement_experiment.py  forced_choice_probe.py  prompt_probe.py  stage0_encoder_probe.py  voicebank_demand_sqa.py
experiments/planb/: README.md  build_hf_dataset.py  degradations.py  eval_compare.py  eval_enhancement_v3.py  eval_realnoise.py  eval_realreverb.py  eval_voicebank_v3.py  generate_corpus.py  make_plots.py  paraphrase.py  rebuild_targets.py  targets.py
experiments/planb/train/: README.md  make_manifest.py  prompts_planb.json  run_finetune.sh  run_open.sh  run_stage2_v2.sh  run_v3.sh  sqa_finetune.yaml  test_prompt_planb.json
experiments/results/: CALIBRATION.md  DEGRADATION.md  ENHANCEMENT.md  REPORT.md  degradation.jsonl  enhancement.jsonl  forced_choice.jsonl  nisqa.csv  objective_metrics.csv  planb_deck.html  planb_deck.pptx  prompt_probe.jsonl  voicebank_sqa.jsonl
experiments/results/planb/: EVAL_COMPARE.md  EVAL_COMPARE_v1.md  corpus_dev.jsonl  corpus_train_open.jsonl  corpus_train_v3.jsonl  corpus_val_open.jsonl  corpus_val_v3.jsonl  eval_compare_open.jsonl  eval_compare_v1.jsonl  eval_compare_v2.jsonl  eval_compare_v3.jsonl  eval_realnoise.jsonl  eval_realnoise_v3.jsonl  open_enhancement.jsonl  open_voicebank.jsonl  paraphrase_pool.json  v3_enhancement.jsonl  v3_voicebank.jsonl
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml
salmonn_sqa/: inference_config.yaml
salmonn_sqa/patches/: local-salmonn.patch
scripts/: check_env.py  fetch_checkpoints.py  fetch_rirs.sh  run_batch_sqa.sh  run_full_introspection.sh  run_sqa.sh  setup_salmonn.sh  start_api.sh  test_api.sh
